posted tweet styling. still work to be done, but things are displayed flex, aligned mostly correctly, color has been chosen. Add html dummy text

--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -1,9 +1,9 @@
-footer {
+.main-footer {
   background-color: #333;
   color: #fff;
 }
 
-footer > div {
+.main-footer > div {
   height: 5rem;
   display: flex;
   justify-content: space-around;
